fixing Horizontal Scrolling Error on Mobile width

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
     line-height: 1.5;
     color: var(--clr-fg);
     background-color: var(--clr-bg);
+    overflow-x: hidden;
   }
   
   /* Light Theme */
@@ -93,4 +94,11 @@
 
   
   
+  * {
+    box-sizing: border-box;
+  }
   
+  body {
+    margin: 0;
+    overflow-x: hidden;
+  }
