--- a/src/components/ScrollToTop/ScrollToTop.css
+++ b/src/components/ScrollToTop/ScrollToTop.css
@@ -2,6 +2,8 @@
     position: fixed;
     bottom: 2em;
     right: 4em;
+    max-width: 100%;
+    overflow-x: hidden;
     background-color: transparent;
   }
   
